--- a/templates/VirtualLab_directories.html
+++ b/templates/VirtualLab_directories.html
@@ -30,7 +30,7 @@
     <div class="background"></div>
 
     <!-- Header Section -->
-    <header class="bg-transparent text-center py-5">
+    <header class="text-center py-5" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden; ">
         <div class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
             <!-- Left Logo -->
             <img src="../images/EASE_logo.png" alt="Left Image" class="img-fluid" style="max-width: 250px; height: auto;">
@@ -47,26 +47,28 @@
     </header>
 
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-md navbar-dark">
-        <div class="container" style="background-color: rgba(0, 0, 0, 0.2); border-radius: 8px;">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a href="home.html" class="nav-link fs-5 fw-bold">Home</a></li>
-                    <li class="nav-item"><a href="aboutVRB.html" class="nav-link fs-5 fw-bold">About VRB</a></li>
-                    <li class="nav-item"><a href="Research.html" class="nav-link fs-5 fw-bold">Research Highlights</a></li>
-                    <li class="nav-item"><a href="Collaboration.html" class="nav-link fs-5 fw-bold">Collaborate</a></li>
-                    <li class="nav-item"><a href="Resources.html" class="nav-link fs-5 fw-bold">Resources</a></li>
-                    <li class="nav-item"><a href="Education.html" class="nav-link fs-5 fw-bold">Education</a></li>
-                    <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold">ViB</a></li>
-                    <li class="nav-item"><a href="competition.html" class="nav-link fs-5 fw-bold">Competition</a></li>
-                    <li class="nav-item"><a href="Contact.html" class="nav-link fs-5 fw-bold">Contact</a></li>
-                </ul>
+        <nav class="navbar navbar-expand-md">
+            <div class="container" style="background-color: rgba(0, 51, 102, 0.9); ">
+                <!-- border-radius: 8px; padding: 0.5rem 1rem; -->
+                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon" style="color: #FFFFFF;"></span>
+                </button> -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item"><a href="home.html" class="nav-link fs-5 fw-bold text-white" >Home</a></li>
+                        <li class="nav-item"><a href="aboutVRB.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">About VRB</a></li>
+                        <li class="nav-item"><a href="Research.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Research Highlights</a></li>
+                        <li class="nav-item"><a href="Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
+                        <li class="nav-item"><a href="Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
+                        <li class="nav-item"><a href="Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
+                        <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">ViB</a></li>
+                        <li class="nav-item"><a href="competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
+                        <li class="nav-item"><a href="Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
+                        <!-- <li class="nav-item"><a href="testing.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Testing</a></li> -->
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
     <header class="bg-secondary text-white text-center py-4">
         <h1 class="display-5">Virtual Labs Directory</h1>
