--- a/templates/Research.html
+++ b/templates/Research.html
@@ -22,6 +22,8 @@
             position: relative;
             margin: 50px 0;
             padding: 10px 0;
+            /* max-height: 50vh; */
+            /* max-width: 50%; */
         }
         .timeline::before {
             content: '';
@@ -207,22 +209,22 @@
             margin-bottom: 20px;
         }
     .modal-xl {
-        max-width: 75%;
+        max-width: 70%;
     }
     </style>
 </head>
 <body>
 
     <!-- Header Section -->
-    <header class="bg-gradient text-center py-2" style="background: linear-gradient(to bottom, #003366, #f0f0f0);">
+    <header class="text-center py-2" style="background: linear-gradient(to top, rgba(255, 255, 255,0), rgba(0, 0, 0, 0.8));  overflow: hidden;"">
         <div class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
             <!-- Left Logo -->
             <img src="../images/EASE_logo.png" alt="Left Image" class="img-fluid" style="max-width: 250px; height: auto;">
     
             <!-- Header Text -->
             <div>
-                <h1 class="display-4 text-black" style="font-weight: 700;">EASE Virtual Research Building</h1>
-                <p class="lead text-black" style="font-size: 1.2rem;">Driving Collaboration, Innovation, and Accessibility in AI and Robotics</p>
+                <h1 class="display-4 text-white" style="font-weight: 700;">EASE Virtual Research Building</h1>
+                <p class="lead text-white" style="font-size: 1.2rem;">Driving Collaboration, Innovation, and Accessibility in AI and Robotics</p>
             </div>
     
             <!-- Right Logo -->
@@ -244,17 +246,17 @@
                     <li class="nav-item"><a href="Collaboration.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Collaborate</a></li>
                     <li class="nav-item"><a href="Resources.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Resources</a></li>
                     <li class="nav-item"><a href="Education.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Education</a></li>
-                    <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">ViB</a></li>
+                    <!-- <li class="nav-item"><a href="ViBHomepage_new.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">ViB</a></li> -->
                     <li class="nav-item"><a href="competition.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Competition</a></li>
                     <li class="nav-item"><a href="Contact.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Contact</a></li>
-                    <li class="nav-item"><a href="testing.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Testing</a></li>
+                    <!-- <li class="nav-item"><a href="testing.html" class="nav-link fs-5 fw-bold text-white" style="margin: 0 10px;">Testing</a></li> -->
                 </ul>
             </div>
         </div>
     </nav>
 
-
-    <div class="container">
+    <!-- Timeline -->
+    <div class="container my-5">
         <header class="text-center mt-5">
             <h1 style="color: rgba(0, 51, 102, 1);">Research Timeline</h1>
             <p class="text-muted">Explore the milestones and achievements of EASE</p>
@@ -301,7 +303,6 @@
             <div class="timeline-dot" data-year="2021"></div>
             <div class="timeline-dot" data-year="2022"></div>
             <div class="timeline-dot" data-year="2023"></div>
-            <!-- <div class="timeline-dot" data-year="2024"></div> -->
         
             <div class="timeline-item timeline-item-left" data-year="2020">
                 <div class="timeline-content"
@@ -370,9 +371,9 @@
         </div>
     </div>
 
-
+    <!-- Case Studies -->
     <div class="container my-5">
-        <h1 class="text-center text-primary mb-4">Case Studies</h1>
+        <h1 class="text-center mb-5" style="color: rgba(0, 51, 102, 1);">Case Studies</h1>
         <div class="row g-4">
             <!-- Tile 1 -->
             <div class="col-md-4">
