--- a/templates/Resources.html
+++ b/templates/Resources.html
@@ -78,9 +78,9 @@
     </nav>
 
     <header class="bg-transparent text-center py-4">
-        <div class="container text-black py-4 rounded">
+        <div class="container py-4 rounded">
             <!-- <h1 class="display-5">Resources</h1> -->
-            <h1 class="lead text-center display-6" style="color: rgba(0, 51, 102, 1);">Access frameworks, tools, open datasets, and publications driving robotics innovation.</h1>
+            <h1 class="lead text-center display-5 fw-bold" style="color: rgba(0, 51, 102, 1);">Access frameworks, tools, open datasets, and publications driving robotics innovation.</h1>
             <!-- <div class="d-flex justify-content-center gap-2">
                 <button class="btn btn-light text-primary">Explore the Highlights</button>
             </div> -->
