--- a/templates/Collaboration.html
+++ b/templates/Collaboration.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="container my-5" style="background-color: rgba(0, 0, 0, 0.3); border-radius: 8px; padding: 0.5rem 1rem;">
-        <h1 class="text-center text-white mb-5">Meet Our Researchers and Teams</h1>
+        <h1 class="text-center text-white mb-5 fw-bold" >Meet Our Researchers and Teams</h1>
         <br>
         <br>
         <br>
