--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../images/bg_image1.png');
+            background-image: url('../images/bg_building.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
